need to finish index readme

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,14 @@
         </div>
     </nav>
 
+    <div id="container">
+        <div id="inner">
+        <h1>Instructions</h1>
+        <h3>## City Weather</h3>
+        <p>Enter the exact name of a city to find the following: Humidity, Climate, Temperature, Wind, Rain, HI/LOW, UV, Date <br> Link: https://www.weatherapi.com/</p>
+        <h3>## Country Data</h3>
+        <p>Enter the exact name of a country to find the following: Language, GDP, Region, Currency, Population, Flag, Coat of Arms <br> Link: https://geography.mmplabs.com/</p>
+         </div>
+    </div>
 </body>
 </html>
