Please link index ejs to main / app

--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,22 @@
         <div class="nav-center">
             <h1>ACTIVE API</h1>
             <div>
-                <a href="index.html">Instructions</a>
-                <a href="country.html">Country</a>
-                <a href="weather.html">Weather</a>
+                <a href="/index">Instructions</a>
+                <a href="/country">Country</a>
+                <a href="/weather">Weather</a>
             </div>
         </div>
     </nav>
 
     <div id="container">
         <div id="inner">
-        <h1>Instructions</h1>
-        <h3>## City Weather</h3>
-        <p>Enter the exact name of a city to find the following: Humidity, Climate, Temperature, Wind, Rain, HI/LOW, UV, Date <br> Link: https://www.weatherapi.com/</p>
-        <h3>## Country Data</h3>
-        <p>Enter the exact name of a country to find the following: Language, GDP, Region, Currency, Population, Flag, Coat of Arms <br> Link: https://geography.mmplabs.com/</p>
+        <h1 id="big">Instructions</h1>
+        <h3 id="semi">## City Weather</h3>
+        <p>Enter the exact name of a city to find the following: Humidity, Climate, Temperature, Wind, Rain, HI/LOW, UV, Date <br> Link: <a href="https://www.weatherapi.com/">https://www.weatherapi.com/</a></p>
+        <button type="button" id="button" href="/weather"><a href="weather.html">Weather</a></button>
+        <h3 id="semi">## Country Data</h3>
+        <p>Enter the exact name of a country to find the following: Language, GDP, Region, Currency, Population, Flag, Coat of Arms <br> Link: <a href="https://geography.mmplabs.com/">https://geography.mmplabs.com/</a></p>
+        <button type="button"  id="button"><a href="/country">Country</a></button>
          </div>
     </div>
 </body>
