--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
         <div id="inner">
         <h1 id="big">Instructions</h1>
         <h3 id="semi">## City Weather</h3>
-        <p>Enter the exact name of a city to find the following: Humidity, Climate, Temperature, Wind, Rain, HI/LOW, UV, Date <br> Link: <a href="https://www.weatherapi.com/">https://www.weatherapi.com/</a></p>
-        <button type="button" id="button" href="/weather"><a href="weather.html">Weather</a></button>
+        <p>Enter the exact name of a city (state is optional) to find the following: Humidity, Climate, Temperature, Wind, Rain, HI/LOW, UV, Date <br> Link: <a href="https://www.weatherapi.com/">https://www.weatherapi.com/</a></p>
+        <button type="button" id="button" href="/weather"><a href="weather">Weather</a></button>
         <h3 id="semi">## Country Data</h3>
         <p>Enter the exact name of a country to find the following: Language, GDP, Region, Currency, Population, Flag, Coat of Arms <br> Link: <a href="https://geography.mmplabs.com/">https://geography.mmplabs.com/</a></p>
         <button type="button"  id="button"><a href="/country">Country</a></button>
