--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div class="nav-center">
             <h1>ACTIVE API</h1>
             <div>
-                <a href="/index">Instructions</a>
+                <a href="/">Instructions</a>
                 <a href="/country">Country</a>
                 <a href="/weather">Weather</a>
             </div>
@@ -28,6 +28,14 @@
         <h3 id="semi">## Country Data</h3>
         <p>Enter the exact name of a country to find the following: Language, GDP, Region, Currency, Population, Flag, Coat of Arms <br> Link: <a href="https://geography.mmplabs.com/">https://geography.mmplabs.com/</a></p>
         <button type="button"  id="button"><a href="/country">Country</a></button>
+        <div class="mini">To run this API, follow these steps:
+        
+        1. Ensure you have Node.js installed.
+        2. Install the required dependencies using `npm install`.
+        3. Create a .env file in the root of the project with three variables: `PORT`, `WEATHER`, and `GEOGRAPHY`
+        4. Set `PORT` to your preferred port for this API.
+        5. Set both `WEATHER` and `GEOGRAPHY` to their respective API keys.
+        6. Run the application using `npm start` or your preferred command.</div>
          </div>
     </div>
 </body>
